feat: add final changes

--- a/Continual-Learning-Introduction.ipynb
+++ b/Continual-Learning-Introduction.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "# Continual Learning \n",
     "## Introduction and fundamental techniques\n",
-    "Authors: Mateusz Wójcik, Mateusz Stolarski  \n",
+    "Author: Mateusz Wójcik  \n",
     "Contact: mateusz.wojcik@pwr.edu.pl\n",
     "\n",
     "This notebook contains introduction into Continual Learning in form of a interactive hands-on playground. The aim was to provide a Python environment where You will be able to dive into the Continual Learning world by preparing and running some practical experiments. We have prepared ready to run experimental setups covering various Continual Learning scenarios.\n",
@@ -43,7 +43,7 @@
     "\n",
     "Across the scientific literature, Continual Learning is also called: Incremental Learning, Sequential Learning, Continuous Learning and Lifelong Learning.\n",
     "\n",
-    "![CL-definition.png](https://drive.google.com/uc?export=view&id=1mTbmlJw_CDHCz6xPu0o_9j0VdoEc_gnU)"
+    "![CL-definition.png](https://drive.google.com/uc?export=view&id=1ralMCUbR6EeL8h37UWYy6Jkh0oBAItUt)"
    ]
   },
   {
@@ -87,6 +87,13 @@
     "from torch.optim import Adam\n",
     "from torch.utils.data import DataLoader\n",
     "from torchmetrics import Accuracy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Common setup across the notebook"
    ]
   },
   {
@@ -531,7 +538,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N_EXPERIENCES = [1, 100]  # Fill this list to check different number of experiences\n",
+    "N_EXPERIENCES = []  # Fill this list to check different number of experiences\n",
     "\n",
     "results = {}\n",
     "for n_experiences in N_EXPERIENCES:\n",
@@ -672,7 +679,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# Model\n",
@@ -845,7 +854,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "EWC_LAMBDAS = [5, 1000]  # Fill this list with three/four different values to check ewc_lambda setups\n",
+    "EWC_LAMBDAS = [0.5]  # Fill this list with three/four different values to check ewc_lambda setups\n",
     "\n",
     "accuracies = {}\n",
     "for ewc_lambda in EWC_LAMBDAS:\n",
@@ -856,7 +865,7 @@
     "    model = MLP(input_layer_size=INPUT_LAYER_SIZE, hidden_layer_size=HIDDEN_LAYER_SIZE, output_layer_size=OUTPUT_LAYER_SIZE, drop_rate=DROP_RATE)\n",
     "    \n",
     "    # Prepare for training & testing\n",
-    "    optimizer = Adam(model.parameters(), lr=LEARNING_RATE)\n",
+    "    optimizer = Adam(model.parameters(), lr=0.00001)\n",
     "    criterion = CrossEntropyLoss()\n",
     "    \n",
     "    # EWC training strategy\n",
@@ -1145,7 +1154,7 @@
    },
    "outputs": [],
    "source": [
-    "PATTERNS_PER_EXPERIENCE = [5, 10]  # Fill that list to try four/five different memory sizes and run the cell\n",
+    "PATTERNS_PER_EXPERIENCE = []  # Fill that list to try four/five different memory sizes and run the cell\n",
     "\n",
     "evaluation_results = {}\n",
     "for patterns_per_exp in PATTERNS_PER_EXPERIENCE:\n",
@@ -1390,17 +1399,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from avalanche.models import SimpleCNN\n",
-    "from torch.optim import SGD\n",
-    "\n",
     "# Prepare your model\n",
-    "model = SimpleMLP()\n",
     "\n",
     "# Prepare yout optimizer\n",
-    "optimizer = SGD(model.parameters(), lr=0.001, momentum=0.9)\n",
     "\n",
-    "# Prepare your loss function\n",
-    "criterion = CrossEntropyLoss()"
+    "# Prepare your loss function"
    ]
   },
   {
@@ -1409,35 +1412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prepare your method\n",
-    "\n",
-    "from avalanche.training import AGEM\n",
-    "from avalanche.training.templates import SupervisedTemplate\n",
-    "from avalanche.training.plugins import ReplayPlugin, EWCPlugin\n",
-    "\n",
-    "replay = ReplayPlugin(mem_size=20)\n",
-    "ewc = EWCPlugin(ewc_lambda=0.001)\n",
-    "\n",
-    "method = SupervisedTemplate(\n",
-    "    model,\n",
-    "    optimizer,\n",
-    "    criterion,\n",
-    "    plugins=[replay, ewc],\n",
-    "    device=DEVICE,\n",
-    ")\n",
-    "\n",
-    "method = AGEM(\n",
-    "    model,\n",
-    "    optimizer,\n",
-    "    criterion,\n",
-    "    train_epochs=TRAIN_EPOCHS,\n",
-    "    train_mb_size=BATCH_SIZE_TRAIN,\n",
-    "    eval_mb_size=BATCH_SIZE_TEST,\n",
-    "    device=DEVICE,\n",
-    "    evaluator=DEFAULT_EVALUATOR,\n",
-    "    # GEM hyperparameters\n",
-    "    patterns_per_exp=10,\n",
-    ")"
+    "# Prepare your method\n"
    ]
   },
   {
